update video logos

--- a/pre-work-assigment/index.html
+++ b/pre-work-assigment/index.html
@@ -29,7 +29,9 @@
     <div class="middle-container">
       <h2>Work Experience</h2>
       <div class="experience-container1">
-        <a href="https://roadscg.com/"><img class="roads" src="images/roadscg.png" alt=""></a>
+        <video class="videoroads" controls loop>
+          <source src="images/roadsvideologo.mp4" type="video/mp4"/>
+        </video>
         <h3>Roads Consulting Group</h3>
         <h4>IT Consultant</h4>
         <p>Implementing and ensuring all the systems of the company to make sure they are running correctly.
@@ -38,7 +40,9 @@
         </p>
       </div>
       <div class="experience-container2">
-        <a href="https://www.dpvtransportation.com/"><img class="dpv" src="images/dpvtrans.png" alt=""></a>
+        <video class="videodpv" controls loop>
+          <source src="images/dpvvideologo.mp4" type="video/mp4"/>
+        </video>
         <h3>DPV Transportation Worldwide</h3>
         <h4>IT Manager</h4>
         <p>Implementing and ensuring all the systems of the company to make sure they are running correctly.
