updated one of the paragraphs

--- a/pre-work-assigment/index.html
+++ b/pre-work-assigment/index.html
@@ -45,9 +45,8 @@
         </video>
         <h3>DPV Transportation Worldwide</h3>
         <h4>IT Manager</h4>
-        <p>Implementing and ensuring all the systems of the company to make sure they are running correctly.
-            Providing advice on current technology for the company customers. Understanding a client's business needs, and designing and implementing a technology solution.
-            Training users and consulting staff.
+        <p>Managing and developing of the different mobile applications implemented to help our drivers in real time.
+          Maintaining quality services by making sure all resources are utilized efficiently while maximizing customer satisfaction through effective problem solving techniques using data analytics tools.
         </p>
       </div>
     </div>
